# rcss-rl-ray

./: .dockerignore  Dockerfile  LICENSE  README.md  TRAINING_TEMPLATE.md  __init__.py  callbacks.py  main.py  pyproject.toml  requirements.txt  test.py  train.py
client/: __init__.py  __init__.pyi  config.py
client/base/: __init__.py  __init__.pyi  http.py
client/fleet/: __init__.py  info.py
client/room/: __init__.py  info.py
config/: __init__.py  allocator.py  bhv.py  env.py  server.py  train.py
configs/inference/: dummy_marl_11v11.yaml  shooting.yaml
configs/pre_train/: gen_dataset.yaml  gen_dataset_smoke.yaml
docs/: design_rcss_env.md
inference/: __init__.py  cli.py  config.py  export.py  exporter.py  loader.py  manifest.py  migrate.py  policy.py  runner.py
models/: __init__.py  fcnet.py
rcss_env/: __init__.py  action.py  action_mask.py  config.py  env.py  obs.py  reward.py
rcss_rl/: __init__.py  config.py  train.py
schema/: __init__.py  _base.py  coach.py  init_state.py  player.py  policy.py  position.py  referee.py  room.py  stopping.py  team.py  trainer.py
tests/: test_allocator_client.py  test_client_api.py  test_diagnostics_logging.py  test_env.py  test_env_reset.py  test_env_reset_runtime_grpc.py  test_env_step_contract.py  test_grpc_service.py  test_main_smoke.py  test_network.py  test_obs.py  test_pretrain_dataset.py  test_pretrain_ray_driver.py  test_remote_env.py  test_shooting_reward.py  test_train.py  test_train_rewrite.py
train/: __init__.py  callbacks.py  config.py  factory.py  train.py
utils/: __init__.py  config.py  path_info.py  retry_.py
(+79 files in other folders)
