[project]
name = "rcss-rl-ray"
version = "0.1.0"
description = "Multi-agent reinforcement learning for RoboCup Soccer Simulation using Ray/RLlib"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "aim>=3.29.1; python_version < '3.13'",
    "ray[rllib]==2.52.0",
    "gymnasium>=1.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pytest>=9.0.2",
    "grpcio>=1.78.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[tool.uv]
offline = true

[tool.uv.sources]
torch = [
    { index = "torch-cpu" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
